Add comprehensive updates summary and rebrand platform to "منصة الفارس

--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>معلم العربية | تعلم اللغة العربية بأسلوب احترافي</title>
-    <meta name="description" content="منصة تعليمية متخصصة في تعليم اللغة العربية لجميع المستويات والأعمار. دورات احترافية مع معلم متخصص وخبرة أكثر من 10 سنوات." />
-    <meta name="author" content="معلم العربية" />
-    <meta name="keywords" content="تعلم العربية, دورات اللغة العربية, معلم عربي, تعليم النحو, تعليم الصرف, دروس عربية أونلاين" />
+    <title>منصة الفارس | تعلم اللغة العربية بأسلوب احترافي</title>
+    <meta name="description" content="منصة الفارس التعليمية متخصصة في تعليم اللغة العربية لجميع المستويات والأعمار. دورات احترافية مع مستر حسن حافظ وخبرة أكثر من 10 سنوات." />
+    <meta name="author" content="منصة الفارس" />
+    <meta name="keywords" content="تعلم العربية, دورات اللغة العربية, مستر حسن حافظ, تعليم النحو, تعليم الصرف, دروس عربية أونلاين" />
 
-    <meta property="og:title" content="معلم العربية | تعلم اللغة العربية بأسلوب احترافي" />
-    <meta property="og:description" content="منصة تعليمية متخصصة في تعليم اللغة العربية لجميع المستويات والأعمار. دورات احترافية مع معلم متخصص." />
+    <meta property="og:title" content="منصة الفارس | تعلم اللغة العربية بأسلوب احترافي" />
+    <meta property="og:description" content="منصة الفارس التعليمية متخصصة في تعليم اللغة العربية لجميع المستويات والأعمار. دورات احترافية مع مستر حسن حافظ." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="معلم العربية | تعلم اللغة العربية بأسلوب احترافي" />
-    <meta name="twitter:description" content="منصة تعليمية متخصصة في تعليم اللغة العربية لجميع المستويات والأعمار." />
+    <meta name="twitter:title" content="منصة الفارس | تعلم اللغة العربية بأسلوب احترافي" />
+    <meta name="twitter:description" content="منصة الفارس التعليمية متخصصة في تعليم اللغة العربية لجميع المستويات والأعمار." />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <link rel="canonical" href="https://arabic-teacher.com" />
+    <link rel="canonical" href="https://platform-alfaris.com" />
   </head>
 
   <body>
